# One-Crooked-Editor

./: CMakeLists.txt  README.md  build.sh  install.sh
libs/editorlibs/buffer/: CMakeLists.txt
libs/editorlibs/buffer/include/: buffer.h  bufferfilehandler.h  bufferfilehandlerfactory.h  ibufferfilehandler.h  ibufferfilehandlerfactory.h
libs/editorlibs/buffer/source/: buffer.cpp  bufferfilehandler.cpp
libs/editorlibs/editor/: CMakeLists.txt
libs/editorlibs/editor/include/: editor.h  editorconstants.h  editorfactory.h  editormeta.h  ieditable.h  ieditor.h  ieditorfactory.h
libs/editorlibs/editor/include/editoractions/: editoraction.h  editoractiontree.h
libs/editorlibs/editor/include/editorcommands/: editorcommandmanager.h  editorcommandmanagerfactory.h  editorcommands.h  editorundohandler.h  editorundohandlerfactory.h  ieditorcommand.h  ieditorcommandmanager.h  ieditorcommandmanagerfactory.h  ieditorcommandscontainer.h  ieditorundohanderfactory.h  ieditorundohandler.h
libs/editorlibs/editor/include/editorcontext/: editorcontext.h  editorcontextfactory.h  ieditorcontext.h  ieditorcontextfactory.h
libs/editorlibs/editor/include/editorfilehandling/: ieditorfile.h  ieditorfilehandler.h  ieditorfilehandlerfactory.h
libs/editorlibs/editor/include/editorstatecontext/: editorstatecontext.h  editorstatecontextfactory.h
libs/editorlibs/editor/include/editorstates/: editorstatecontext.h  editorstatecontextfactory.h  editorstates.h  insertstate.h  normalstate.h
libs/editorlibs/editor/include/editorstates/interfaces/: ieditorstate.h  ieditorstatecontext.h  ieditorstatecontextfactory.h  ieditorstatemutator.h
libs/editorlibs/editor/source/: editor.cpp
libs/editorlibs/editor/source/editoractions/: actiontree.cpp
libs/editorlibs/editor/source/editorcommands/: editorcommandmanager.cpp  editorundohandler.cpp  testeditorcommand.cpp
libs/editorlibs/editor/source/editorstates/: editorstatecontext.cpp  insertstate.cpp  normalstate.cpp
libs/editorlibs/states/include/: ieditorstate.h  ieditorstatecontext.h  ieditorstatecontextfactory.h
libs/gapbuffer/: gapbuffer.h  test  test2.cpp
libs/headerlibs/filehandling/: filehandling.h
libs/headerlibs/gapbuffer/: gapbuffer.h  test  test.cpp  test2.cpp
libs/headerlibs/linkedlist/: doublyindexedlinkedlist.h  test
libs/headerlibs/statemachine/: istate.h  loststateexception.h  statemachine.h  test.cpp
libs/headerlibs/trees/: test  test.cpp  test2.cpp  treealgorithms.h  trees.h
libs/headerlibs/undoing/: undoable.h
libs/linkedlist/: doublylinkedlist.h  test  test.cpp
libs/statemachine/: test
source/: main.cpp
source/editor/buffer/include/: buffer.h  bufferfilehandler.h  bufferfilehandlerfactory.h  ibufferfilehandler.h  ibufferfilehandlerfactory.h
source/editor/buffer/source/: buffer.cpp  bufferfilehandler.cpp
source/editor/editor/include/: editor.h  editorfactory.h  ieditor.h  ieditorfactory.h
source/editor/editor/source/: editor.cpp
source/editor/state/include/: context.h  icontext.h  ieditorstate.h  insertstate.h  istatecontextfactory.h  normalstate.h  statecontextfactory.h
source/editor/state/source/: context.cpp  insertstate.cpp  normalstate.cpp
source/metaprogramming/: editormeta.h
source/systems/input/include/: iinputmanager.h  inputmanager.h
source/systems/input/source/: inputmanager.cpp
